data/derived/comb/progs/unify/prog1341.ml.out
Characters 160-173:
  | Average (e1,e2) -> (eval (e1,x,y) + eval (e2,x,y)) /. 2.0;;
                        ^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
